# Toolbelt

./: AllCommands.csv  LICENSE  README.md  TempText.csv  \  badCommand.py  commands.py  names.csv  pyproject.toml  setup.py  toolbelt.py
CLI/: commands.py
ToolBelt_Utl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
