[tool.poetry]
name = "toolbelt"
version = "0.1.0"
description = "Toolbelt is a CLI that helps users store, organize, and retrieve terminal commands they frequently use but tend to forget."
authors = ["Wyatt Bramblett"]
license = "MIT"
readme = "README.md"
 
[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
toolbelt = "toolbelt:cli"
